@@ -117,6 +117,10 @@
     <td valign="top" align="center">No</td>
   </tr>
   <tr>
+    <td valign="top">jdkversion</td>
+    <td valign="top">Sets the JDK_VERSION option. This is a string option.</td>
+    <td valign="top" align="center">No</td>
+  </tr>  <tr>
     <td valign="top">keeplinecolumn</td>
     <td valign="top">Sets the KEEP_LINE_COLUMN grammar option.  This is a boolean option.</td>
     <td valign="top" align="center">No</td>
@@ -178,7 +182,7 @@
 </p>
 <hr>
 
-<p align="center">Copyright &copy; 2000-2001,2003,2005 Apache Software Foundation.
+<p align="center">Copyright &copy; 2000-2001,2003,2006 Apache Software Foundation.
 All rights
 Reserved.</p>
 
